--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -207,3 +207,6 @@ ja:
         password_confirmation : パスワード(確認)
         current_password: 現在のパスワード
         remember_me: パスワードを保存する
+      bot:
+        name: 名前
+        image: 画像
