--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -211,3 +211,4 @@ ja:
         name: 名前
         image: 画像
         classify_failed_message: 回答出来なかった場合のメッセージ
+        start_message: チャット開始時のメッセージ
