同義文を登録する処理を実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -215,6 +215,8 @@ ja:
       answer:
         headline: 見出し
         body: 内容
+      training_message:
+        body: 本文
   enums:
     bot:
       learning_status:
