--- a/learning/prototype/sample.ipynb
+++ b/learning/prototype/sample.ipynb
@@ -20,6 +20,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## マークダウンもかけます\n",
+    "- いいね！\n",
+    "- 素晴らしい！"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
