コミットテスト

--- a/learning/prototype/sample.ipynb
+++ b/learning/prototype/sample.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**push test**"
+    "**testing commit by git**"
    ]
   },
   {
