コメントの記述内容と、検証内容を大幅に修正
意味解析のLDAと線形解析のLDAを間違っていたので、修正しました。
お恥ずかしい・・・大変申し訳ございません。

--- a/learning/prototype/LDA_in_scikit_learn.ipynb
+++ b/learning/prototype/LDA_in_scikit_learn.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# [WIP #138986545] LDAを使って質問文の意味解析をする\n",
     "\n",
@@ -10,9 +13,55 @@
     "\n",
     "## scikit-learn の LDAで出来ること\n",
     "\n",
-    "まずは手始めに、何が出来るのかを調べてみました。\n",
+    " トピック解析（意味解析）ができるようです。\n",
     "\n",
-    "- 次元削除\n",
+    " 事前に与えられたテキストから学習を行い、指定された数のトピックに分類します。\n",
+    " \n",
+    " 学習されたLDAモデルに、問題テキストを与えると、近いと思われるトピックが戻るものと思われます（こちらは調査中です）。\n",
+    " \n",
+    " \n",
+    "## ほかのツールを使用した LDA\n",
+    "\n",
+    "- 調査中\n",
+    "\n",
+    "## テストデータ／サンプルコードを使って検証\n",
+    "\n",
+    "後日検証いたします。\n",
+    "\n",
+    "- scikit-learn のサンプルを動かしてみます\n",
+    "\n",
+    "  LDA_in_scikit_learn_00.ipynb ご参照\n",
+    "  \n",
+    "\n",
+    "- テストデータを使用したトピック解析のサンプル\n",
+    "\n",
+    "  LDA_in_scikit_learn_01.ipynb ご参照\n",
+    "  \n",
+    "\n",
+    "- （その他、できることが新たに判明し次第、検証項目を追加します）\n",
+    "\n",
+    "\n",
+    "## 参考文献\n",
+    "\n",
+    "### 公式ドキュメント\n",
+    "\n",
+    "http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.LatentDirichletAllocation.html#sklearn.decomposition.LatentDirichletAllocation\n",
+    "\n",
+    "### Web上のドキュメント\n",
+    "\n",
+    "- ただいま事例を調査中です\n",
+    " \n",
+    " \n",
+    "## 気がついたこと（後日検討）\n",
+    "\n",
+    "### 次元削除\n",
+    "\n",
+    " おなじ LDA と呼ばれているので、気がつくまで間違って調査を進めてしてしまいましたが・・・一応ご参考までに記録を残しておきます。\n",
+    "\n",
+    "- scikit-learn の LDA\n",
+    "\n",
+    " sklearn.discriminant_analysis.LinearDiscriminantAnalysis というクラスが用意されております。\n",
+    "\n",
     "\n",
     " 入力となるデータセットは、ラベルがついている必要があります（すなわち教師ありきのデータが必要）。\n",
     "\n",
@@ -27,21 +76,6 @@
     " すなわち SVM などの前処理（＝辞書構築など）として使えそう、といったのが現時点でのイメージです。\n",
     "\n",
     "\n",
-    "- 調査観点\n",
-    "\n",
-    " 下記のようなところかと考えています。（後日、変わる可能性はあります）\n",
-    " \n",
-    " (1) 意味解析じたいに使えるのか？\n",
-    " \n",
-    " （公式ページやWeb上の記事などを見た感じでは、ちょっと違う感じがするのですが・・・とりあえず進めてみます）\n",
-    " \n",
-    " (2) SVMなどの教師ありき学習機能の補完機能として使えそうか？\n",
-    " \n",
-    " （イメージとしてはこちらの方が当たっている感じ）\n",
-    " \n",
-    " \n",
-    "## ほかのツールを使用した LDA\n",
-    "\n",
     "- gensim\n",
     "\n",
     " これも次元削除（辞書構築）用のツールとして使えるようです。\n",
@@ -50,37 +84,6 @@
     " \n",
     " （scikit-learn の LDA でこれが出来るのであれば不要です）\n",
     "\n",
-    "\n",
-    "## テストデータ／サンプルコードを使って検証\n",
-    "\n",
-    "後日検証いたします。\n",
-    "\n",
-    "- scikit-learn のサンプルを動かしてみます\n",
-    "\n",
-    "LDA_in_scikit_learn_00.ipynb ご参照\n",
-    "\n",
-    "- テストデータを使用した次元削除（辞書構築）処理のイメージ\n",
-    "\n",
-    "LDA_in_scikit_learn_01.ipynb ご参照\n",
-    "\n",
-    "\n",
-    "- （その他、できることが新たに判明し次第、検証項目を追加します）\n",
-    "\n",
-    "\n",
-    "## 参考文献\n",
-    "\n",
-    "### 公式ドキュメント\n",
-    "\n",
-    "http://scikit-learn.org/stable/modules/lda_qda.html\n",
-    "\n",
-    "### Web上のドキュメント\n",
-    "\n",
-    "- 次元削除についてのコメントと例\n",
-    "\n",
-    " http://cheminformist.itmol.com/TEST/wp-content/uploads/2015/04/Dimensionality_Reduction.html\n",
-    " \n",
-    " \n",
-    "## 気がついたこと（後日検討）\n",
     "\n",
     "### 教師なしデータの分析\n",
     "\n",
@@ -137,7 +140,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
