調査内容／結果を修正／追加
・見出しページを修正
・制約事項などについての記述を追加
・１サービスに複数の分類器が実装できるかテスト
・訓練時に大量データを投入できるかどうかテスト

--- a/learning/prototype/Watson_NLC.ipynb
+++ b/learning/prototype/Watson_NLC.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# [#135676645] Watson NLCでMy-opeで実現したいことが出来るかどうか調査したい"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## <a href=\"Watson_NLC_00.ipynb\">NLCを使用する準備</a>"
    ]
@@ -18,6 +24,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Bluemixアカウントの取得方法と、NLCサービスの作成（ユーザー名／パスワード発行）について掲載しています。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
     "## <a href=\"Watson_NLC_01.ipynb\">NLC利用についての概要</a>"
    ]
   },
@@ -25,7 +41,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "料金体系、サービスの概要、利用上の注意事項／制約事項について掲載しています。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
     "## <a href=\"Watson_NLC_02.ipynb\">公式Tutorialの実行</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "手順の概要、Python3依存ライブラリー導入、実行例（訓練実行、予測など）について掲載しています。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## <a href=\"Watson_NLC_03.ipynb\">公式Tutorialの実行 (part2)</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "他の分類器をサービス・インスタンスに追加する事例について掲載しています。またここでは15,000件近いデータを投入して訓練しています。"
    ]
   }
  ],
