分類器の追加学習についての調査結果を追加
・APIなどによる追加学習（インクリメンタル・トレーニング）には対応していない旨の記述追加
・管理ツールを使った追加学習手順のハンズオン結果をレポート

--- a/learning/prototype/Watson_NLC.ipynb
+++ b/learning/prototype/Watson_NLC.ipynb
@@ -22,7 +22,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Bluemixアカウントの取得方法と、NLCサービスの作成（ユーザー名／パスワード発行）について掲載しています。"
    ]
@@ -39,7 +42,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "料金体系、サービスの概要、利用上の注意事項／制約事項について掲載しています。"
    ]
@@ -56,7 +62,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "手順の概要、Python3依存ライブラリー導入、実行例（訓練実行、予測など）について掲載しています。"
    ]
@@ -73,9 +82,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "他の分類器をサービス・インスタンスに追加する事例について掲載しています。またここでは15,000件近いデータを投入して訓練しています。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## <a href=\"Watson_NLC_04.ipynb\">公式Tutorialの実行 (part3)</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "Bluemix上で公開されている管理ツール（注：β版）を使用し、追加学習を行う（NLCに新しいクラスを追加する）手順について記載しています。"
    ]
   }
  ],
