正則化オプションの効果確認レポートを追加

--- a/learning/prototype/using_negative_data/01.ipynb
+++ b/learning/prototype/using_negative_data/01.ipynb
@@ -239,7 +239,7 @@
    "source": [
     "実際に、scikit-learn の LogisticRegression に対し、class_weight、sample_weight をパラメータ指定して動作確認いたしました。\n",
     "\n",
-    "結果は<b><a href=\"02.ipynb\">こちらのページ</a></b>に掲載しております。\n",
+    "結果は<b><a href=\"04.ipynb\">こちらのページ</a></b>に掲載しております（2017/02/24改訂）。\n",
     "\n",
     "- class_weight（コンストラクターのパラメータ）\n",
     "\n",
@@ -248,7 +248,10 @@
     "\n",
     "- sample_weight（学習時のパラメータ）\n",
     "\n",
-    "  訓練データごとに重み付けを与えることができる （訓練データ＝質問文１件と等価）"
+    "  訓練データごとに重み付けを与えることができる （訓練データ＝質問文１件と等価）\n",
+    "  \n",
+    "  \n",
+    "（注）改訂前の結果は<b><a href=\"02.ipynb\">こちらのページ</a></b>に掲載しております。"
    ]
   }
  ],
