MultinomialNB における sample_weight の確認レポートを追加

--- a/learning/prototype/using_negative_data.ipynb
+++ b/learning/prototype/using_negative_data.ipynb
@@ -49,6 +49,28 @@
     "editable": true
    },
    "source": [
+    "###  (ご参考) ナイーブベイズにおけるダウンウェイト"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "正則化という観点からはずれているのですが、scikit-learn の多項ナイーブベイズモジュールでも、sample_weight による重み付け制御が可能なようです。\n",
+    "\n",
+    "参考までにレポートをこちらにまとめました。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
     "## 負例データ数値化手法の調査（WIP）"
    ]
   },
