--- a/learning/prototype/using_negative_data/01.ipynb
+++ b/learning/prototype/using_negative_data/01.ipynb
@@ -253,6 +253,22 @@
     "  \n",
     "（注）改訂前の結果は<b><a href=\"02.ipynb\">こちらのページ</a></b>に掲載しております。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (ご参考) ナイーブベイズにおける sample_weight 制御"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "正則化手法ではないのですが、scikit-learn の多項ナイーブベイズモジュールでも、sample_weight による重み付け制御（ダウンウェイトによる実質的なペナルティ付与）が可能なようです。\n",
+    "\n",
+    "ご参考までに、<b><a href=\"05.ipynb\">こちらのページ</a></b>に動作確認結果を掲載しております。"
+   ]
   }
  ],
  "metadata": {
