レポートを修正
参考データを追加（accuracy 評価時の誤答データを抽出して調査）

--- a/learning/prototype/better_algorithm/01.ipynb
+++ b/learning/prototype/better_algorithm/01.ipynb
@@ -119,10 +119,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017/03/31 PM 02:56:23 TrainingMessageFromCsv#__build_learning_training_messages count of learning data: 17443\n",
-      "2017/03/31 PM 02:56:23 TextArray#__init__ start\n",
-      "2017/03/31 PM 02:56:33 TextArray#to_vec start\n",
-      "2017/03/31 PM 02:56:33 TextArray#to_vec end\n"
+      "2017/04/01 PM 10:03:55 TrainingMessageFromCsv#__build_learning_training_messages count of learning data: 17443\n",
+      "2017/04/01 PM 10:03:55 TextArray#__init__ start\n",
+      "2017/04/01 PM 10:04:05 TextArray#to_vec start\n",
+      "2017/04/01 PM 10:04:06 TextArray#to_vec end\n"
      ]
     }
    ],
@@ -171,27 +171,24 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "MLPClassifier(activation='logistic', alpha=0.0001, batch_size='auto',\n",
-       "       beta_1=0.9, beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
-       "       hidden_layer_sizes=(100,), learning_rate='constant',\n",
-       "       learning_rate_init=0.001, max_iter=200, momentum=0.9,\n",
-       "       nesterovs_momentum=True, power_t=0.5, random_state=0, shuffle=False,\n",
-       "       solver='adam', tol=0.0001, validation_fraction=0.1, verbose=False,\n",
-       "       warm_start=False)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLPClassifier: fitting...\n",
+      "MLPClassifier: done in 168.174s.\n"
+     ]
     }
    ],
    "source": [
+    "from time import time\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
+    "print(\"MLPClassifier: fitting...\")\n",
+    "t0 = time()\n",
+    "\n",
     "cls = MLPClassifier(activation='logistic', shuffle=False, random_state=0)\n",
-    "cls.fit(X, y)"
+    "cls.fit(X, y)\n",
+    "print(\"MLPClassifier: done in %0.3fs.\" % (time() - t0))"
    ]
   },
   {
@@ -210,12 +207,26 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLPClassifier: predicting...\n",
+      "MLPClassifier: done in 0.587s.\n"
+     ]
+    }
+   ],
    "source": [
+    "print(\"MLPClassifier: predicting...\")\n",
+    "t0 = time()\n",
+    "\n",
     "y_pred = cls.predict(X) # 予測クラスが戻る\n",
-    "y_proba = cls.predict_proba(X) # 予測クラスの proba が戻る"
+    "y_proba = cls.predict_proba(X) # 予測クラスの proba が戻る\n",
+    "print(\"MLPClassifier: done in %0.3fs.\" % (time() - t0))"
    ]
   },
   {
@@ -281,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -293,9 +304,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017/03/31 PM 03:28:20 TextArray#__init__ start\n",
-      "2017/03/31 PM 03:28:21 TextArray#to_vec start\n",
-      "2017/03/31 PM 03:28:21 TextArray#to_vec end\n"
+      "2017/04/01 PM 10:06:54 TextArray#__init__ start\n",
+      "2017/04/01 PM 10:06:54 TextArray#to_vec start\n",
+      "2017/04/01 PM 10:06:54 TextArray#to_vec end\n"
      ]
     }
    ],
@@ -343,16 +354,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLPClassifier: predicting...\n",
+      "MLPClassifier: done in 0.001s.\n"
+     ]
+    }
+   ],
    "source": [
+    "print(\"MLPClassifier: predicting...\")\n",
+    "t0 = time()\n",
+    "\n",
     "y_test_pred = cls.predict(X_test) # 予測クラスが戻る\n",
-    "y_test_proba = cls.predict_proba(X_test) # 予測クラスの proba が戻る"
+    "y_test_proba = cls.predict_proba(X_test) # 予測クラスの proba が戻る\n",
+    "print(\"MLPClassifier: done in %0.3fs.\" % (time() - t0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<17x1968 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 58 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
    ]
   },
   {
@@ -369,11 +420,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -411,6 +463,223 @@
     "        print('%s ---> Unable to predict' % d)\n",
     "    else:\n",
     "        print('%s ---> class=%d (proba=%0.3f)' % (d, c, p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## (4) 以下は参考です。\n",
+    "\n",
+    "### (4-1) accuracy算出段階でNGとなったデータ\n",
+    "\n",
+    "accuracy=99.57% となりましたが、残りの 0.43%（75件）のデータを参考までにリストします。\n",
+    "\n",
+    "6件は正解にもかかわらず proba<0.5 のデータ、残りの69件は誤答とのことでした。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "def error_detected(X, y, y_pred, y_probas):\n",
+    "    n_sample = X.shape[0]\n",
+    "    pred_err_cnt = 0\n",
+    "    unable_pred_cnt = 0\n",
+    "\n",
+    "    y_proba = numpy.max(y_probas, axis=1)\n",
+    "\n",
+    "    detected_list = []\n",
+    "    for i in range(n_sample):\n",
+    "        if y[i] == y_pred[i]:\n",
+    "            if y_proba[i] > 0.5:\n",
+    "                # しきい値を超えたもの（正しく予測できたので正答）\n",
+    "                pass\n",
+    "            else:\n",
+    "                # しきい値を超えなかったもの（これは回答不能）\n",
+    "                detected_list.append((i, X[i], y[i], y_pred[i], y_proba[i]))\n",
+    "                unable_pred_cnt += 1\n",
+    "        else:\n",
+    "            if y_proba[i] > 0.5:\n",
+    "                # しきい値を超えたもの（これは誤答）\n",
+    "                detected_list.append((i, X[i], y[i], y_pred[i], y_proba[i]))\n",
+    "                pred_err_cnt += 1\n",
+    "            else:\n",
+    "                # しきい値を超えなかったもの（正しく予測できなかったが回答不能：これはある意味正答）\n",
+    "                pass\n",
+    "\n",
+    "    print('sample=%d, error=%d(Unable to predict=%d, Prediction error=%d)' % (\n",
+    "        n_sample, unable_pred_cnt+pred_err_cnt, unable_pred_cnt, pred_err_cnt))\n",
+    "    \n",
+    "    return detected_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample=17446, error=75(Unable to predict=6, Prediction error=69)\n"
+     ]
+    }
+   ],
+   "source": [
+    "detected_list = error_detected(X, y, y_pred, y_proba)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3642 [mcafee=0.224 する=0.447 れる=0.224 アイコ=0.224 クリック=0.224 ステータス=0.224 セキュリティ=0.224 マーク=0.224 右=0.224 対処=0.224 教える=0.224 方法=0.224 欲しい=0.224 表示=0.447] 3531 0.589123447925 x ---> Prediction error\n",
+      "3534 [it=0.378 ツール=0.378 何=0.378 収集=0.378 情報=0.378 管理=0.378 資産=0.378] 3957 0.604830744285 x ---> Prediction error\n",
+      "3536 [it=0.408 ツール=0.408 収集=0.408 情報=0.408 管理=0.408 資産=0.408] 3534 0.537643720481 x ---> Prediction error\n",
+      "3703 [re=0.180 spam=0.180 する=0.718 どう=0.180 なる=0.180 よい=0.180 れる=0.180 メール=0.359 件名=0.180 判別=0.180 誤る=0.180 返信=0.180 迷惑=0.180] 3948 0.500026913492 x ---> Prediction error\n",
+      "3938 [こんにちは=1.000] 3931 0.50193203953 x ---> Prediction error\n",
+      "3936 [おなか=0.707 すく=0.707] 3934 0.73912800196 x ---> Prediction error\n",
+      "3957 [it=0.408 ツール=0.408 収集=0.408 情報=0.408 管理=0.408 資産=0.408] 3534 0.537643720481 x ---> Prediction error\n",
+      "3964 [mcafee=0.229 する=0.459 れる=0.229 アイコ=0.229 クリック=0.229 ステータス=0.229 セキュリティ=0.229 マーク=0.229 右=0.229 対処=0.229 教える=0.229 方法=0.229 表示=0.459] 3531 0.504700387736 x ---> Prediction error\n",
+      "3531 [mcafee=0.224 する=0.447 れる=0.224 アイコ=0.224 クリック=0.224 ステータス=0.224 セキュリティー=0.224 マーク=0.224 右=0.224 対処=0.224 教える=0.224 方法=0.224 欲しい=0.224 表示=0.447] 3531 0.478438275345 o ---> Unable to predict\n",
+      "3703 [e=0.338 re=0.169 spam=0.169 する=0.676 どう=0.169 なる=0.169 よい=0.169 れる=0.169 メール=0.338 件名=0.169 判別=0.169 誤る=0.169 返信=0.169 迷惑=0.169] 3948 0.508194139218 x ---> Prediction error\n",
+      "3703 [email=0.359 re=0.180 spam=0.180 する=0.718 どう=0.180 なる=0.180 よい=0.180 れる=0.180 件名=0.180 判別=0.180 誤る=0.180 返信=0.180 迷惑=0.180] 3948 0.624282226525 x ---> Prediction error\n",
+      "3531 [mcafee=0.224 する=0.447 れる=0.224 アイコ=0.224 クリック=0.224 ステータス=0.224 セキュリティー=0.224 マーク=0.224 右=0.224 対処=0.224 教える=0.224 方法=0.224 欲しい=0.224 表示=0.447] 3531 0.478438275345 o ---> Unable to predict\n",
+      "3703 [e=0.338 re=0.169 spam=0.169 する=0.676 どう=0.169 なる=0.169 よい=0.169 れる=0.169 メール=0.338 件名=0.169 判別=0.169 誤る=0.169 返信=0.169 迷惑=0.169] 3948 0.508194139218 x ---> Prediction error\n",
+      "3703 [email=0.359 re=0.180 spam=0.180 する=0.718 どう=0.180 なる=0.180 よい=0.180 れる=0.180 件名=0.180 判別=0.180 誤る=0.180 返信=0.180 迷惑=0.180] 3948 0.624282226525 x ---> Prediction error\n",
+      "3497 [e=0.289 outlook=0.289 する=0.577 れる=0.289 アカウント=0.289 エラーメッセージ=0.289 メール=0.289 作成=0.289 表示=0.289] 4664 0.701216594128 x ---> Prediction error\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "    上位１５件ほど表示\n",
+    "'''\n",
+    "for i, X, y, y_pred, y_proba in detected_list[0:15]:\n",
+    "    dump_str = TestTool.dump_features(X.toarray()[0], vectorizer.vocabulary_)\n",
+    "    if (y == y_pred):\n",
+    "        print(y, dump_str, y_pred, y_proba, 'o ---> Unable to predict')\n",
+    "    else:\n",
+    "        print(y, dump_str, y_pred, y_proba, 'x ---> Prediction error')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### (4-2) 誤答する可能性が高いデータ\n",
+    "\n",
+    "上記調査結果を受け、一例として、誤答する可能性が高いデータを調査してみます。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2017/04/01 PM 10:06:55 TextArray#__init__ start\n",
+      "2017/04/01 PM 10:06:55 TextArray#to_vec start\n",
+      "2017/04/01 PM 10:06:55 TextArray#to_vec end\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "誤答の例：\n",
+    "3534 [it=0.378 ツール=0.378 何=0.378 収集=0.378 情報=0.378 管理=0.378 資産=0.378] 3957 0.604830744285 x ---> Prediction error\n",
+    "'''\n",
+    "questions2 = [\n",
+    "    '情報収集ツールにはどんなものがありますか？', # 正解＝3957\n",
+    "    'IT資産管理の情報収集ツールとは何ですか？', # 正解＝3534 <--- これは誤答する可能性が高そう・・・\n",
+    "]\n",
+    "X_test2 = TestTool.prepare_tf_idf_vectors_from_questions(questions2, vectorizer)\n",
+    "\n",
+    "y_test_pred = cls.predict(X_test2) # 予測クラスが戻る\n",
+    "y_test_proba = cls.predict_proba(X_test2) # 予測クラスの proba が戻る"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 残念ながら、２番目の質問文が誤答されてしまいました。\n",
+    "\n",
+    "proba は 60% と高率でした"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3957, 3957])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.98864174,  0.60483074])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numpy.max(y_test_proba, axis=1)"
    ]
   }
  ],
