レポートが崩れてしまったので修正

--- a/learning/prototype/better_algorithm/07-nosetests-checkpoint.ipynb
+++ b/learning/prototype/better_algorithm/07-nosetests-checkpoint.ipynb
@@ -37,12 +37,13 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
+    "```\n",
     "MacBookPro-makmorit-jp:learning makmorit$ pwd\n",
     "/Users/makmorit/GitHub/donusagi-bot/learning\n",
     "MacBookPro-makmorit-jp:learning makmorit$ ls -al\n",
@@ -59,7 +60,8 @@
     "drwxr-xr-x  29 makmorit  staff    986 Mar 31 10:46 prototype\n",
     "-rw-r--r--   1 makmorit  staff   1098 Mar 31 10:42 requirements.txt\n",
     "-rw-r--r--   1 makmorit  staff      0 Feb  3 13:40 setup.py\n",
-    "MacBookPro-makmorit-jp:learning makmorit$"
+    "MacBookPro-makmorit-jp:learning makmorit$\n",
+    "```"
    ]
   },
   {
@@ -77,12 +79,13 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
+    "```\n",
     "MacBookPro-makmorit-jp:learning makmorit$ nosetests learning/tests/engine/test_ptna_conversation.py\n",
     "/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
     "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
@@ -93,7 +96,9 @@
     "Ran 5 tests in 41.801s\n",
     "\n",
     "OK\n",
-    "MacBookPro-makmorit-jp:learning makmorit$ "
+    "MacBookPro-makmorit-jp:learning makmorit$ \n",
+    "```\n",
+    "\n"
    ]
   },
   {
@@ -129,13 +134,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "source": [
+    "```\n",
     "E\n",
     "======================================================================\n",
     "ERROR: Failure: ImportError (No module named 'MySQLdb')\n",
@@ -166,7 +172,8 @@
     "----------------------------------------------------------------------\n",
     "Ran 1 test in 0.001s\n",
     "\n",
-    "FAILED (errors=1)"
+    "FAILED (errors=1)\n",
+    "```"
    ]
   },
   {
@@ -182,16 +189,18 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
+    "```\n",
     "try:\n",
     "    import MySQLdb\n",
     "except:\n",
-    "    pass"
+    "    pass\n",
+    "```"
    ]
   },
   {
@@ -207,12 +216,13 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
+    "```\n",
     "EEEEE\n",
     "======================================================================\n",
     "ERROR: test_fail_blank (learning.tests.engine.test_ptna_conversation.PtnaConversationTestCase)\n",
@@ -222,7 +232,8 @@
     "    result = Reply(self.bot_id, helper.learning_parameter()).perform(questions)\n",
     "  File \"/Users/makmorit/GitHub/donusagi-bot/learning/learning/core/predict/reply.py\", line 17, in __init__\n",
     "    self.db = MySQLdb.connect(host=dbconfig['host'], db=dbconfig['name'], user=dbconfig['user'],\n",
-    "NameError: name 'MySQLdb' is not defined"
+    "NameError: name 'MySQLdb' is not defined\n",
+    "```"
    ]
   },
   {
@@ -238,13 +249,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "source": [
+    "```\n",
     "try:\n",
     "    import MySQLdb\n",
     "except:\n",
@@ -256,7 +268,8 @@
     "            self.db = MySQLdb.connect(host=dbconfig['host'], db=dbconfig['name'], user=dbconfig['user'],\n",
     "                                 passwd=dbconfig['password'], charset='utf8')\n",
     "        except:\n",
-    "            self.db = None"
+    "            self.db = None\n",
+    "```"
    ]
   },
   {
@@ -302,15 +315,17 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
+    "```\n",
     "class LearningParameter:\n",
     "    :\n",
-    "    ALGORITHM_NEURAL_NETWORK = 2"
+    "    ALGORITHM_NEURAL_NETWORK = 2\n",
+    "```"
    ]
   },
   {
@@ -326,12 +341,13 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
+    "```\n",
     "from sklearn.neural_network import MLPClassifier\n",
     ":\n",
     "class Bot:\n",
@@ -358,7 +374,8 @@
     "                    activation='logistic', max_iter=10000, shuffle=False, random_state=0\n",
     "                )\n",
     "                estimator.fit(training_set.x, training_set.y)\n",
-    "        :"
+    "        :\n",
+    "```"
    ]
   },
   {
@@ -384,12 +401,13 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
+    "```\n",
     "from unittest import TestCase\n",
     "from nose.tools import ok_, eq_\n",
     "\n",
@@ -460,7 +478,8 @@
     "        print(result.answer_id)\n",
     "        eq_(result.answer_id, Reply.CLASSIFY_FAILED_ANSWER_ID)\n",
     "        print(result.probability)\n",
-    "        ok_(result.probability > self.threshold)"
+    "        ok_(result.probability > self.threshold)\n",
+    "```"
    ]
   },
   {
@@ -491,12 +510,13 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
+    "```\n",
     "MacBookPro-makmorit-jp:learning makmorit$ nosetests learning/tests/engine/test_ptna_conversation_MLP.py\n",
     "/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
     "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
@@ -589,7 +609,8 @@
     "Ran 5 tests in 877.596s\n",
     "\n",
     "FAILED (failures=2)\n",
-    "MacBookPro-makmorit-jp:learning makmorit$"
+    "MacBookPro-makmorit-jp:learning makmorit$\n",
+    "```"
    ]
   },
   {
@@ -610,12 +631,13 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
+    "```\n",
     "MacBookPro-makmorit-jp:learning makmorit$ nosetests learning/tests/engine/test_ptna_conversation_MLP.py\n",
     "/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
     "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
@@ -668,7 +690,8 @@
     "Ran 5 tests in 0.190s\n",
     "\n",
     "FAILED (failures=2)\n",
-    "MacBookPro-makmorit-jp:learning makmorit$"
+    "MacBookPro-makmorit-jp:learning makmorit$\n",
+    "```"
    ]
   }
  ],
