--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -220,6 +220,9 @@ ja:
         answer_id: 回答
       training_message:
         body: 本文
+      word_mapping:
+        word: 単語
+        synonym: 同義語
   enums:
     bot:
       learning_status:
